refactor: move validation to services fix: fix userDto and itemDto sends to user